--- a/utilities.parent/rxjava2.parent/pom.xml
+++ b/utilities.parent/rxjava2.parent/pom.xml
@@ -12,6 +12,7 @@
 	</properties>
 	<modules>
 		<module>rxjava2.window</module>
+		<module>rxjava2.flow</module>
 	</modules>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/io.reactivex.rxjava2/rxjava -->
