--- a/utilities.parent/pom.xml
+++ b/utilities.parent/pom.xml
@@ -11,10 +11,11 @@
 		<project.reporting.outputEncoding>${file.encoding}</project.reporting.outputEncoding>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<skipTests>true</skipTests>
+		<skipTests>false</skipTests>
 	</properties>
 	<modules>
 		<module>rxjava2.parent</module>
 		<module>java8.parent</module>
+		<module>nanohttpd.parent</module>
 	</modules>
 </project>
