add rsocket utilities

--- a/utilities.parent/pom.xml
+++ b/utilities.parent/pom.xml
@@ -17,6 +17,7 @@
 		<module>rxjava2.parent</module>
 		<module>java8.parent</module>
 		<module>nanohttpd.parent</module>
-		<module>scalecubeio.parent</module>
+		<module>rsocket.parent</module>
+		<module>kvs.parent</module>
 	</modules>
 </project>
