change phase of "colf-java" to "generate-test-sources" change name of "colf-java" to "colf-java-test"

--- a/utilities.parent/java8.parent/java8.serialization/pom.xml
+++ b/utilities.parent/java8.parent/java8.serialization/pom.xml
@@ -53,7 +53,8 @@
 				</configuration>
 				<executions>
 					<execution>
-						<id>colf-java</id>
+						<id>colf-java-test</id>
+						<phase>generate-test-sources</phase>
 						<goals>
 							<goal>compile</goal>
 						</goals>
